Eventos, Alert, CalcularSoma e LimitacoesTextField